Fix PP Tests Code-Blocks Overflowing
Fixed `pp/test/github.css`: source code blocks where overflowing because of pandoc's theme generated CSS for `pre.sourceCode {}` --- it was set to `overflow: visibile;`, I've added a lines in the CSS that sets it to `auto`!

--- a/pp/test/github.css
+++ b/pp/test/github.css
@@ -591,3 +591,7 @@ kbd {
 hr {
   border-bottom-color: #eee;
 }
+
+pre.sourceCode {
+  overflow: auto;
+}
